<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_main"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_first_name"
            android:layout_width="220sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/text_first_name"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/text_input_last_name"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_last_name"
            android:layout_width="220sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/text_last_name"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/button_pop_ola"
            app:layout_constraintTop_toTopOf="@id/text_input_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pop_ola"
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:layout_gravity="start"
            android:layout_marginTop="93dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_pop_ola"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/text_ola"
            app:layout_constraintTop_toTopOf="@id/text_input_last_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_label_ola"
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:layout_gravity="end"
            android:layout_marginTop="93dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_label_ola"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/text_ola"
            app:layout_constraintTop_toTopOf="@id/text_input_last_name" />

        <TextView
            android:id="@+id/text_ola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ola"
            app:layout_constraintTop_toBottomOf="@id/button_label_ola"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="143dp"
            android:layout_marginBottom="10dp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>